2017-12-07  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-session.el (w3m-session-select-delete)
	(w3m-session-select-rename): Retain cursor position after completion;
	simplify code ([emacs-w3m:12832]).

2017-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-add-name-anchors): Relax regexp
	([emacs-w3m:12824]).  Thanks to Musha-san and Shirai-san.

2017-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-detect-meta-charset): Ignore comment ([emacs-w3m:12828]).
	Thanks to Renato Ferreira.

2017-11-18  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-filter.el (w3m-filter-add-name-anchors):
	Work for id="name" where name begins with "." ([emacs-w3m:12812]).

2017-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-copy-buffer): Make the copied buffer the next of the
	current buffer by default (like Firefox does); use the new argument
	LAST to make it the last in order of buffers.
	(w3m-view-this-url-1, w3m-goto-url, w3m-goto-url-new-session): Set LAST.

	* w3m-util.el (w3m-generate-new-buffer): Make the new buffer the next
	of the current buffer if the new argument NEXT is set.

	* w3m-util.el (w3m-about-cookie): Use input instead of textarea.

2017-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make `w3m-retrieve' do onload redirection.

	* w3m.el (w3m-retrieve-and-render): Move onload redirection stuff to
	(w3m-w3m-onload-redirection): New function.
	(w3m-w3m-retrieve-1): Use it.
	(w3m-decode-encoded-contents): Use zlib-decompress-region for gzip.

2017-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-cookie.el (w3m-about-cookie): Work for old Emacsen.
	* aclocal.m4 (AC_PATH_EMACS): Work for Emacs 27 and greater.

2017-09-25  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-confirm-leaving-secure-page):
	Move forward ([emacs-w3m:12807]).

2017-09-25  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-goto-url-new-session): Fix the problem ([emacs-w3m:12584])
	that a w3m buffer is mis-named "*server*-nnnnnn";